[gd_scene load_steps=11 format=3 uid="uid://bas7ky7128ehe"]

[ext_resource type="Script" path="res://Menu/SettingMenu/SettingMenu.gd" id="1_d7yma"]
[ext_resource type="Texture2D" uid="uid://j3mt0sgd4cio" path="res://Menu/SettingMenu/bg (4).png" id="1_he0tn"]
[ext_resource type="Texture2D" uid="uid://bi82w4umqk5yi" path="res://Menu/SettingMenu/setting (2).png" id="2_4et2f"]
[ext_resource type="PackedScene" uid="uid://crep0hfussfrl" path="res://MyButton/MyExitMenuButton.tscn" id="3_24fek"]
[ext_resource type="PackedScene" uid="uid://desjwy18fy7s8" path="res://MyLabel/MyLabel.tscn" id="4_esl3g"]
[ext_resource type="Texture2D" uid="uid://d2rftmkfuqvlq" path="res://Menu/SettingMenu/bg_windowsize.png" id="5_fjwvt"]
[ext_resource type="Texture2D" uid="uid://d0res7ec5wy6a" path="res://Menu/SettingMenu/scrollbar.png" id="6_37kfa"]
[ext_resource type="AudioStream" uid="uid://cmnmeky11nfwo" path="res://addons/kenney_ui_audio/mouserelease1.wav" id="8_6a3al"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_i8j1t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pt3li"]
bg_color = Color(0.207843, 0.207843, 0.219608, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="SettingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d7yma")
to_scene_when_exit_path = "res://Menu/TitleMenu/TitleMenu.tscn"

[node name="Setting(2)" type="Sprite2D" parent="."]
visible = false
position = Vector2(160, 90)
texture = ExtResource("2_4et2f")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -58.0
offset_right = 100.5
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_he0tn")

[node name="ExitMenuButton" parent="." instance=ExtResource("3_24fek")]
layout_mode = 1
offset_left = 84.0
offset_top = -53.0
offset_right = 101.0
offset_bottom = -43.0

[node name="TitleLabel" parent="." instance=ExtResource("4_esl3g")]
layout_mode = 1
offset_left = -21.0
offset_top = -48.0
offset_right = 21.0
offset_bottom = -24.0
text = "ตั้งค่า"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 71.0
offset_right = 215.0
offset_bottom = 88.0
texture = ExtResource("5_fjwvt")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.207843, 0.219608, 1)
theme_override_font_sizes/font_size = 8
text = "เสียง"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicHSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 91.0
offset_right = 215.0
offset_bottom = 107.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("6_37kfa")
theme_override_icons/grabber_highlight = ExtResource("6_37kfa")
theme_override_icons/grabber_disabled = ExtResource("6_37kfa")
theme_override_icons/tick = ExtResource("6_37kfa")
theme_override_styles/slider = SubResource("StyleBoxLine_i8j1t")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_pt3li")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_pt3li")

[node name="head" type="Label" parent="MusicHSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = -25.0
offset_bottom = 8.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.207843, 0.219608, 1)
theme_override_font_sizes/font_size = 10
text = "เพลง"
vertical_alignment = 1

[node name="Label" type="Label" parent="MusicHSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectHSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 104.0
offset_right = 215.0
offset_bottom = 120.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("6_37kfa")
theme_override_icons/grabber_highlight = ExtResource("6_37kfa")
theme_override_icons/grabber_disabled = ExtResource("6_37kfa")
theme_override_icons/tick = ExtResource("6_37kfa")
theme_override_styles/slider = SubResource("StyleBoxLine_i8j1t")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_pt3li")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_pt3li")

[node name="head" type="Label" parent="EffectHSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = -25.0
offset_bottom = 8.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.207843, 0.219608, 1)
theme_override_font_sizes/font_size = 10
text = "ประกอบ"
vertical_alignment = 1

[node name="Label" type="Label" parent="EffectHSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogHSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 117.0
offset_right = 215.0
offset_bottom = 133.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("6_37kfa")
theme_override_icons/grabber_highlight = ExtResource("6_37kfa")
theme_override_icons/grabber_disabled = ExtResource("6_37kfa")
theme_override_icons/tick = ExtResource("6_37kfa")
theme_override_styles/slider = SubResource("StyleBoxLine_i8j1t")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_pt3li")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_pt3li")

[node name="head" type="Label" parent="DialogHSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = -25.0
offset_bottom = 8.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.207843, 0.219608, 1)
theme_override_font_sizes/font_size = 10
text = "พูด"
vertical_alignment = 1

[node name="Label" type="Label" parent="DialogHSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6a3al")

[connection signal="after_play_press_sound" from="ExitMenuButton" to="." method="_on_exit_menu_button_after_play_press_sound"]
[connection signal="value_changed" from="MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="value_changed" from="EffectHSlider" to="." method="_on_effect_h_slider_value_changed"]
[connection signal="value_changed" from="DialogHSlider" to="." method="_on_dialog_h_slider_value_changed"]
